--- a/3_MidtermProjects/ProjectWNF/main.ipynb
+++ b/3_MidtermProjects/ProjectWNF/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wine Reviews\n",
-    "The goal of this project is to regress wine prices from atributes like country, region, and points on [wineenthusiast](https://www.wineenthusiast.com/). You are provided with almost 300K reviews scraped from WineEnthusiast during June and November 2017. Think about some interesting questions you could answer with this data: which wines are most positively reviewed? does this positivity correlates with its price? More info about this data set [here](https://www.kaggle.com/zynicide/wine-reviews). "
+    "# Reseñas de vinos \n ",
+    "El objetivo de este proyecto es hacer una regresión de los precios del vino de atributos como el país, la región y los puntos en [wineenthusiast](https://www.wineenthusiast.com/). Se le proporcionan casi 300K reseñas extraídas de WineEnthusiast durante junio y Noviembre de 2017. Piense en algunas preguntas interesantes que podría responder con estos datos: ¿qué vinos reciben una valoración más positiva? ¿Esta positividad se correlaciona con su precio? Más información sobre este conjunto de datos [aquí](https://www.kaggle.com/zynicide/wine-reviews). "
    ]
   },
   {
