--- a/3_MidtermProjects/ProjectBHP/main.ipynb
+++ b/3_MidtermProjects/ProjectBHP/main.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Understanding Boston Housing Prices\n",
-    "The Boston housing dataset contains 506 observations and 14 variables. The goal of this project is to understand which of the variables in study drive the price of homes in Boston and to be able to predict prices from the atributes.  "
+    "# Comprensión de los precios de la vivienda en Boston \n ",
+    "El dataset de viviendas de Boston contiene 506 observaciones y 14 variables. El objetivo de este proyecto es comprender cuál de las variables en estudio impulsan el precio de las viviendas en Boston y poder predecir los precios a partir de los atributos. "
    ]
   },
   {
