--- a/3_MidtermProjects/trabajadores/main_trabajo.ipynb
+++ b/3_MidtermProjects/trabajadores/main_trabajo.ipynb
@@ -287,6 +287,7 @@
         }
       },
       "source": [
+        "#eliminamos los atipicos (99 o -99)\n",
         "df = df[df.ingreso_op != -99]\n",
         "df[[\"C3P16.1\", \"ingreso_op\",'C0P10.3']].describe"
       ],
@@ -386,7 +387,7 @@
         "})\n",
         "\n",
         "ax = df4.plot.kde()\n",
-        "#cuidado puede estar errado usar  bootstrap"
+        "#cuidado puede estar errado seguir limpiando atipicos"
       ],
       "execution_count": null,
       "outputs": [
