--- a/3_MidtermProjects/trabajadores/main_trabajo.ipynb
+++ b/3_MidtermProjects/trabajadores/main_trabajo.ipynb
@@ -387,7 +387,7 @@
         "})\n",
         "\n",
         "ax = df4.plot.kde()\n",
-        "#cuidado puede estar errado seguir limpiando atipicos"
+        "#cuidado puede estar errado seguir limpiando atipicos y balancear"
       ],
       "execution_count": null,
       "outputs": [
