--- a/3_MidtermProjects/trabajadores/main_trabajo.ipynb
+++ b/3_MidtermProjects/trabajadores/main_trabajo.ipynb
@@ -414,23 +414,7 @@
       "source": [
         "Interesante \n",
         "----------\n",
-        "correlacionar con ingresos VS jefes vs sexo vs Accidentes.\n",
-        "\n",
-        "En su establecimiento, ¿existe delegado, comisión o comité mixto de salud que trate los temas de seguridad y/o higiene en el trabajo?\n",
-        "\n",
-        "Dispone de elementos de proteccion personal necesarios para sus tareas (casco, guantes, calzado de seguridad, etc.)?\n",
-        "\n",
-        "¿Quién provee los elementos de protección personal?\n",
-        "\n",
-        "¿Los usa?\n",
-        "\n",
-        "------\n",
-        "\n",
-        "¿Es su empleador / jefe directo una mujer o un hombre?\n",
-        "\n",
-        "¿Ud. cree que su condición de mujer / hombre influye a la hora de ser contratado?\n",
-        "\n",
-        "Usted cree que su condición de mujer/ hombre influye en el trato de sus clientes/ pacientes/ alumnos/ etc.?"
+        "correlacionar con ingresos VS jefes vs sexo vs Accidentes.\n"
       ]
     }
   ]
